# miniOS

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/utils/: macro.h
lib/: CMakeLists.txt  minilib.h
minilib/: CMakeLists.txt  minilib.h  printf.c  string.c
platform/: CMakeLists.txt  platform.h
platform/ch32v307/: ch32v307.h  csr.S  csr.h  map.h  pfic.c  pfic.h  rcc.c  rcc.h  timer.c  timer.h  uart.c  uart.h
platform/device/: device.h  stdbuff.c  stdbuff.h
src/app/: CMakeLists.txt
src/app/minishell/: CMakeLists.txt  busybox.c  shell.c
src/app/minishell/include/: readline.h  shell.h
src/app/minishell/readline/: readline.c
src/app/minishell/resource/: logo.h
src/kernel/: CMakeLists.txt  kernel.c  minios.ld  start.S  user.c
src/kernel/context/: lock.c  sched.c
src/kernel/csr/: csr.S  csr.c
src/kernel/include/: context.h  csr.h  kernel.h  mem.h  page.h  stimer.h  syscall.h  test.h  trap.h
src/kernel/mem/: mem.S  page.c
src/kernel/syscall/: syscall.c  usys.S
src/kernel/test/: exception_test.c  external_interrupt_test.c  lock_test.c  page_test.c  preemptive_task_test.c  syscall_test.c  task_test.c  timer_test.c  trap_test.c
src/kernel/timer/: stimer.c
src/kernel/trap/: trap.S  trap.c
